Avoid potential error message overflow

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -321,6 +321,7 @@
     color: red;
     display: none;
     margin-bottom: 20px;
+    max-width: 340px;
   }
 
   /* ===== Footer ====== */
